# tokamak64

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/curve/: Cargo.toml  README.md
backend/curve/src/: consts.rs  lib.rs  lut.rs  main.rs  math.rs  tests.rs
backend/engine/: Cargo.toml
backend/engine/src/: lib.rs
backend/ffi/: Cargo.toml  README.md  flutter_rust_bridge.yaml
backend/ffi/src/: lib.rs
backend/jet/: Cargo.toml  build.rs
backend/jet/examples/: serialization_demo.rs
backend/jet/src/: api.rs  convert.rs  lib.rs  serialization.rs
backend/nucleus/: Cargo.toml  README.md  nucleus.fbs
backend/nucleus/src/: action.rs  board.rs  consts.rs  fees.rs  lib.rs  movement.rs  player.rs  tests.rs  types.rs
backend/program/: Cargo.toml  README.md
backend/program/src/: accounts.rs  addresses.rs  instruction.rs  lib.rs  state.rs
backend/program/src/processors/: bind.rs  charge.rs  claim.rs  common.rs  compress.rs  discharge.rs  drain.rs  drift.rs  eject.rs  extract.rs  fission.rs  fuse.rs  infuse.rs  init.rs  init_charge.rs  init_wallet.rs  inject.rs  leak.rs  mod.rs  overload.rs  rebind.rs  shift.rs  topup.rs  translate.rs  unbind.rs  vent.rs
backend/program/tests/: binding.rs  claiming.rs  common.rs  compression.rs  cross_cutting.rs  dissipation.rs  initialization.rs  instructions.rs  overload.rs  transfer.rs
backend/program/tests/common/: accounts.rs  artefacts.rs  boards.rs  constants.rs  elements.rs  harness.rs  macros.rs  mod.rs  pdas.rs  prelude.rs  types.rs  utils.rs
docs/: GAME_DESIGN.md  MECHANICS.md  PLAYER_GUIDE.md
frontend/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/ffi/: ffi_binding.dart
schemas/: README.md  api.fbs  board.fbs  game.fbs  player.fbs  types.fbs
