[workspace]
resolver = "3"
members = ["curve", "ffi", "jet", "nucleus", "program"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
bytemuck = { version = "1.24" }
curve = { path = "curve", package = "tokamak-curve" }
nucleus = { path = "nucleus", package = "tokamak-nucleus" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
