[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { workspace = true }
curve = { workspace = true }
nucleus = { workspace = true }

pinocchio = { version = "0.10.0", features = ["cpi"] }
pinocchio-token = { version = "0.5.0" }


[dev-dependencies]
mollusk-svm = "0.9.0"
solana-sdk = "3.0.0"
