[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { workspace = true }
curve = { workspace = true }
nucleus = { workspace = true }

pinocchio = { version = "0.10.0", default-features = false, features = ["cpi"] }
pinocchio-token = { version = "0.5.0" }


[dev-dependencies]
mollusk-svm = "0.9.0"
solana-sdk = "3.0.0"

[profile.release]
lto = "fat"       # Enable Link Time Optimization (cross-crate optimization)
codegen-units = 1 # Slower build, but allows better optimization
opt-level = 3     # Optimize for speed (default is 3, 'z' is size)
strip = true
