[package]
name = "tokamak-program"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Workspace
bytemuck = { workspace = true }
nucleus = { workspace = true }
# External
pinocchio = { version = "0.10.0", default-features = false, features = ["cpi"] }
pinocchio-system = { version = "0.5.0" }
pinocchio-token = { version = "0.5.0" }

[dev-dependencies]
# External
mollusk-svm = "0.9.0"
solana-sdk = "3.0.0"

[features]
devnet = []
default = ["devnet"]
